feat: add license

--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             <div class="col-12 text-center copyright-info">
                 <span>Copyright © yongtian1688.com.cn, all rights reserved 南京永田气体 版权所有</span>
             </div>
+            <div class="col-12 text-center pb-2 license-info">
+                <a href="assets/docs/hazardous-chemicals-business-license.pdf">危化品经营许可证</a> ｜
+                <a href="assets/docs/registration-certificate.pdf">营业执照</a>
+            </div>
             <div class="col-12 text-center pb-2">
                 <a href="http://www.beian.miit.gov.cn">苏ICP备2022026208号</a>
             </div>
