--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <a href="assets/docs/registration-certificate.pdf">营业执照</a>
             </div>
             <div class="col-12 text-center pb-2">
-                <a href="http://www.beian.miit.gov.cn">苏ICP备2022026208号</a>
+                <a href="https://beian.miit.gov.cn">苏ICP备2022026208号</a>
             </div>
         </div>
     </div>
